--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Harry Puddephatt
 description: Year 8 Doing IT
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://www.howtogeek.com/wp-content/uploads/2012/12/Plain-Black-Wallpaper.png
 
 #
 # Flags below are optional
